XSS, Bugs, and styles - Fix dialog cannot read property 'close' on date picker - XSS fixes - ListItemsSection view title overflow

--- a/assets/css/sass/views/_list-items-section.scss
+++ b/assets/css/sass/views/_list-items-section.scss
@@ -124,6 +124,9 @@
             color: #555;
             text-shadow: -1px -1px 0 rgba(255,255,255,0.5);
             cursor: default;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
         }
 
     }
